--- a/css/styles.css
+++ b/css/styles.css
@@ -17,12 +17,12 @@
 
 body {
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'SpaceMono-Regular';
   line-height: 1.6;
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 80%;
   padding-left: 1.4rem;
   padding-right: 1.4rem;
   margin-left: auto;
@@ -30,13 +30,7 @@ body {
 }
 
 #navbar {
-  --navbar-height: 64px;
-  position: fixed;
-  height: var(--navbar-height);
-  background-color: var(--navbar-bg-color);
-  left: 0;
-  right: 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
 }
 
 .navbar-container {
@@ -44,16 +38,35 @@ body {
   justify-content: space-between;
   height: 100%;
   align-items: center;
+  padding: 21px 0;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 .navbar-item {
-  margin: 0.4em;
-  width: 100%;
+  margin-right: 32px;
+  /* width: 100%; */
+}
+
+#navbar .navbar-links .navbar-item:last-child {
+  margin-right: 0;
+}
+
+.home-link {
+  margin-right: 60px;
 }
 
 .home-link,
 .navbar-link {
-  color: var(--navbar-text-color);
+  font-family: 'SpaceMono-bold';
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--dim-grey);
   transition: color 0.2s ease-in-out;
   text-decoration: none;
   display: flex;
@@ -63,31 +76,18 @@ body {
               color 0.2s ease-in-out;
 }
 
-.home-link:focus,
-.home-link:hover {
-  color: var(--navbar-text-color-focus);
-}
-
 .navbar-link {
   justify-content: center;
-  width: 100%;
-  padding: 0.4em 0.8em;
-  border-radius: 5px;
+  /* width: 100%; */
+  /* padding: 0.4em 0.8em;
+  border-radius: 5px; */
 }
 
 .navbar-link:focus,
 .navbar-link:hover {
-  color: var(--navbar-text-color-focus);
-  background-color: var(--navbar-bg-contrast);
+  color: var(--yellow);
 }
 
-.navbar-logo {
-  background-color: var(--navbar-text-color-focus);
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  margin-right: 0.5em;
-}
 
 .navbar-toggle {
   cursor: pointer;
@@ -159,20 +159,39 @@ body {
   max-height: 0;
   overflow: hidden;
   position: absolute;
-  background-color: var(--navbar-bg-color);
+  /* background-color: var(--navbar-bg-color); */
   display: flex;
   flex-direction: column;
   align-items: center;
   left: 0;
   right: 0;
-  margin: 1.4rem;
+  /* margin: 1.4rem;
   border-radius: 5px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 20px rgba(100, 100, 100, 0.3); */
 }
 
 #navbar.opened .navbar-links {
   padding: 1em;
   max-height: none;
+}
+
+.get-scootin {
+  font-family: 'SpaceMono-bold';
+  font-style: normal;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: var(--yellow);
+  padding: 14px 38px;
+  border: 2px solid var(--yellow);
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.get-scootin:hover {
+  background-color: #fff;
+  color: var(--yellow);
 }
 
 @media screen and (min-width: 700px) {
