--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,7 @@ body {
   overflow: hidden;
 }
 
-.first {
+.first, .third {
   background: url(/img/half-circle.png) no-repeat right;
   background-position-y: 80px;
 }
@@ -389,7 +389,41 @@ body {
   }
   /* /second */
 
+  /* Third */
+  .third img.telemetry-arrow {
+    right: -300px;
+    top: 200px;
+  }
+  /* /Third */
+
 /* /Telemetry section */
+
+/* Sign up links section */
+  .sign-up-links {
+    background: url(/img/background-image.png) no-repeat right / cover;
+    padding: 100px 0;
+  }
+
+  .sign-up-links .row .col-6:first-child h2 {
+    font-family: 'SpaceMono-bold';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -2.14286px;
+    color: #FFFFFF;
+  }
+
+  .sign-up-links .row .col-6:nth-child(2) {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
+
+  .sign-up-links .row .col-6:nth-child(2) a {
+    margin-left: 35px;
+  }
+/* /Sign up links section */
 
 @media screen and (max-width: 1300px) {
   .hero-line {
@@ -489,6 +523,30 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .sign-up-links .row {
+    flex-direction: column;
+  }
+
+  .sign-up-links .row .col-6 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .sign-up-links .row .col-6:nth-child(1) h2 {
+    text-align: center;
+  }
+  .sign-up-links .row .col-6:nth-child(1) {
+    margin-bottom: 40px;
+  }
+
+  .sign-up-links .row .col-6:nth-child(2) {
+    justify-content: center;
+  }
+
+  .sign-up-links .row .col-6:nth-child(2) a:first-child {
+    margin-left: 0;
   }
 
 }
@@ -661,6 +719,29 @@ body {
     padding: 14px 38px;;
   }
 
+  .sign-up-links {
+    padding: 80px 0;
+  }
+
+  .sign-up-links .row .col-6:first-child h2 {
+    font-size: 32px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -1.42857px;
+  }
+
+  .sign-up-links .row .col-6:nth-child(2) a {
+    margin-left: 15px;
+  }
+
+  .app-store {
+    width: 113.57px;
+  }
+
+  .google-play {
+    width: 130px;
+  }
+
 }
 
 @media screen and (max-width: 375px) {
@@ -747,6 +828,20 @@ body {
     position: absolute;
     left: -190px;
     top: 70px;
+  }
+
+  .sign-up-links .row .col-6:first-child h2 {
+    font-size: 25px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: -1.42857px;
+  }
+  .app-store {
+    width: 100%;
+  }
+
+  .google-play {
+    width: 100%;
   }
 }
 
