--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url(./_variables.css);
 @import url(./fonts.css);
+@import url(./fonts.css);
 
 
 * {
@@ -425,6 +426,72 @@ body {
   }
 /* /Sign up links section */
 
+/* Footer section */
+  .footer {
+    padding: 35px 0;
+    background-color: #333A44;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer-links ul,
+  .social-media ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .footer-links ul > li {
+    margin-right: 32px;
+  }
+
+  .footer-links ul > li:first-child {
+    margin-right: 60px;
+  }
+
+  .footer-links ul > li a {
+    text-decoration: none;
+    font-family: 'SpaceMono-bold';
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 25px;
+    color: var(--dim-grey);
+    transition: all 0.5s ease;
+  }
+
+  .footer-links ul > li a:hover {
+    color: var(--yellow);
+  }
+
+  .footer ul > li {
+    list-style: none;
+  }
+
+  .social-media ul > li {
+    margin-left: 24px;
+  }
+
+  .social-media ul > li a {
+    transition: all 0.5s ease;
+  }
+
+  .facebook:hover img {
+    content: url("/img/facebook-hover.png");
+  }
+
+  .twitter:hover img {
+    content: url("/img/twitter-hover.png");
+  }
+  .instagramm:hover img {
+    content: url("/img/instagramm-hover.png");
+  }
+
+/* /Footer section */
+
 @media screen and (max-width: 1300px) {
   .hero-line {
     display: none;
@@ -609,6 +676,21 @@ body {
 
   .telemetry-arrow {
     width: 500px;
+  }
+
+  .footer-content,
+  .footer-links ul {
+    flex-direction: column;
+  }
+
+  .footer-links {
+    margin-bottom: 60px;
+  }
+
+  .footer-links ul > li,
+  .footer-links ul > li:first-child {
+    margin-right: 0;
+    margin-bottom: 25px;
   }
 }
 
